--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "caniuse-lite": "^1.0.30001439",
-    "json-server": "^0.17.0",
-    "react": "^17.0.2",
+    "json-server": "^0.17.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.49.9",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.56.2",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
